--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# unncessary data files for exporting
+2.Initial_Graph_Building/annual_report_data/*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
