Added Disseration code

--- a/9.R SEEDED LDA/dictionary.yml
+++ b/9.R SEEDED LDA/dictionary.yml
@@ -1,6 +1,7 @@
-Marketing_Management: [marketing, sales]
+Marketing_Management: [marketing, sales, commercial]
 Technology: [technology, digital]
-Research_Engineering: [teacher, professor, medicine, medical, cancer, clinical, molecular, immunology, oncology, engineering, engineer, health, science, research, biology, scientist, chemistry, infectious]
-"Finance (Legal)": [attorney, finance]
-HR: [human, relations]
+Research_Engineering: [teacher, professor, medicine, medical, cancer, clinical, molecular, immunology, oncology, engineering, engineer, health, science, scientific, research, biology, scientist, chemistry, infectious]
+"Finance (Legal)": [attorney, finance, cfo, financial, accounting]
+HR_Management: [human, relations, ceo, chairman, executive, coo, vice, co-founder, chairman, executive, vp, partner, manager, senior]
 "Finance (Operational)": [operations, planning]
+other: [positions, position, division, affairs, global, various, served]
